# HDAF-HYOMI--FIX--TEXT--CORRECTION--RED--LINE

.github/workflows/: build.yml
icons/: icon.icns
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  main.rs  models.rs
src/css/: main.css
src/js/: api.js  app.js  mock.js
src/js/views/: history.js  journal.js  notes.js
