[package]
name = "journal-app"
version = "0.1.0"
description = "הדף היומי — יומן אישי מוצפן"
authors = []
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open"] }

# SQLite — bundled (ללא תלות חיצונית)
rusqlite = { version = "0.31", features = ["bundled"] }

# הצפנה
aes-gcm  = "0.10"
argon2   = "0.5"

# עזר
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rand       = "0.8"
hex        = "0.4"
zeroize    = "1"  
thiserror  = "1"
dirs-next  = "2"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default     = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
